Fix map return